# RustChatApp

./: .env.sample  .gitignore  Cargo.toml  README.md  diesel.toml  stackpg.yml
.github/workflows/: rust.yml
migrations/2020-02-20-112640_create_posts/: up.sql
src/: main.rs
src/chat/: mod.rs  models.rs  ws_rs.rs
src/repository/: mainlib.rs  mod.rs  models.rs  schema.rs
src/route/: get.rs  mod.rs  models.rs  static_files.rs
src/services/: mod.rs  tcpservice.rs
static/chat/: Room.js  User.js  bundle.js  index.css  index.html  index.js
static/css/: custom.css
